--- a/attorney.html
+++ b/attorney.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lawyer Consult</title>
+    <title>Lawyer & CA Consult</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -45,7 +45,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Lawyer Consult</a>
+	      <a class="navbar-brand" href="index.html">Lawyer & CA Consult</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -54,7 +54,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="practice-area.html" class="nav-link">Practice Areas</a></li>
+	          <li class="nav-item"><a href="our-services.html" class="nav-link">Our Services</a></li>
 	          <li class="nav-item"><a href="cases.html" class="nav-link">Cases</a></li>
 	          <li class="nav-item active"><a href="attorney.html" class="nav-link">Attorneys</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
