--- a/blog-single.html
+++ b/blog-single.html
@@ -54,7 +54,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="practice-area.html" class="nav-link">Practice Areas</a></li>
+	          <li class="nav-item"><a href="our-services.html" class="nav-link">Our Services</a></li>
 	          <li class="nav-item"><a href="cases.html" class="nav-link">Cases</a></li>
 	          <li class="nav-item"><a href="attorney.html" class="nav-link">Attorneys</a></li>
 	          <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
