--- a/our-services.html
+++ b/our-services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lawyer & CA Consult</title>
+    <title></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -54,8 +54,8 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="our-services.html" class="nav-link">Our Services</a></li>
-	          <li class="nav-item active"><a href="cases.html" class="nav-link">Cases</a></li>
+	          <li class="nav-item active"><a href="our-services.html" class="nav-link">Our Services</a></li>
+	          <li class="nav-item"><a href="cases.html" class="nav-link">Cases</a></li>
 	          <li class="nav-item"><a href="attorney.html" class="nav-link">Attorneys</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -70,92 +70,187 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate mb-5 text-center">
-          	<p class="breadcrumbs mb-0"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span>Cases <span><i class="fa fa-chevron-right"></i></span></p>
-            <h1 class="mb-0 bread">Cases Studies</h1>
+          	<p class="breadcrumbs mb-0"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Our Services <i class="fa fa-chevron-right"></i></span></p>
+            <h1 class="mb-0 bread">Our Services</h1>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb">
-		<div class="container-fluid px-md-4">
+    <section class="ftco-section">
+		<div class="container">
 		  <div class="row justify-content-center pb-5">
-			<div class="col-md-8 text-center heading-section ftco-animate">
-			  <span class="subheading">Cases</span>
-			  <h2 class="mb-3">Recent Client Success Stories</h2>
+			<div class="col-md-7 heading-section text-center ftco-animate">
+			  <span class="subheading">Our Services</span>
+			  <h2>What We Offer</h2>
 			</div>
 		  </div>
 		  <div class="row">
-			<div class="col-md-3 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-1.jpg);">
-				  <div class="text">
-					<h2>Corporate Compliance</h2>
-					<p>Ensuring businesses meet legal and financial obligations.</p>
+			<div class="col-md-4 d-flex align-items-stretch ftco-animate">
+			  <div class="services-2 text-center">
+				<div class="icon-wrap">
+				  <div class="mini-icon d-flex align-items-center justify-content-center"><span class="flaticon-stats"></span></div>
+				  <div class="icon d-flex align-items-center justify-content-center">
+					<span class="flaticon-stats"></span>
+				  </div>
+				</div>
+				<h2>Business Law & Compliance</h2>
+				<p>Comprehensive business legal support and compliance for seamless operations.</p>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex align-items-stretch ftco-animate">
+			  <div class="services-2 text-center">
+				<div class="icon-wrap">
+				  <div class="mini-icon d-flex align-items-center justify-content-center"><span class="flaticon-family"></span></div>
+				  <div class="icon d-flex align-items-center justify-content-center">
+					<span class="flaticon-family"></span>
+				  </div>
+				</div>
+				<h2>Family Law & Estate Planning</h2>
+				<p>Expert assistance in family disputes, estate distribution, and legal documentation.</p>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex align-items-stretch ftco-animate">
+			  <div class="services-2 text-center">
+				<div class="icon-wrap">
+				  <div class="mini-icon d-flex align-items-center justify-content-center"><span class="flaticon-handcuffs"></span></div>
+				  <div class="icon d-flex align-items-center justify-content-center">
+					<span class="flaticon-handcuffs"></span>
+				  </div>
+				</div>
+				<h2>Criminal Law Support</h2>
+				<p>Defending your rights with expert criminal law representation and guidance.</p>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex align-items-stretch ftco-animate">
+			  <div class="services-2 text-center">
+				<div class="icon-wrap">
+				  <div class="mini-icon d-flex align-items-center justify-content-center"><span class="flaticon-stay-home"></span></div>
+				  <div class="icon d-flex align-items-center justify-content-center">
+					<span class="flaticon-stay-home"></span>
+				  </div>
+				</div>
+				<h2>Real Estate & Tax Advisory</h2>
+				<p>Specialized legal advice for real estate matters and property tax optimization.</p>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex align-items-stretch ftco-animate">
+			  <div class="services-2 text-center">
+				<div class="icon-wrap">
+				  <div class="mini-icon d-flex align-items-center justify-content-center"><span class="flaticon-injury"></span></div>
+				  <div class="icon d-flex align-items-center justify-content-center">
+					<span class="flaticon-injury"></span>
+				  </div>
+				</div>
+				<h2>Personal Injury & Claims</h2>
+				<p>Helping you claim the compensation you deserve for personal injuries and damages.</p>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex align-items-stretch ftco-animate">
+			  <div class="services-2 text-center">
+				<div class="icon-wrap">
+				  <div class="mini-icon d-flex align-items-center justify-content-center"><span class="flaticon-auction"></span></div>
+				  <div class="icon d-flex align-items-center justify-content-center">
+					<span class="flaticon-auction"></span>
+				  </div>
+				</div>
+				<h2>Judicial Law & Auditing</h2>
+				<p>Expert representation in judicial matters and financial auditing for transparency.</p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
+
+	  <section class="ftco-appointment ftco-section img" style="background-image: url(images/bg_2.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-6 pr-md-5">
+			  <div class="heading-section heading-section-white">
+				<h2 class="mb-3">Why Choose Us?</h2>
+				<p>We are committed to delivering exceptional legal and financial consulting services. Our expertise spans diverse areas, ensuring our clients receive the best advice and representation for their needs.</p>
+				<div class="row mt-md-4">
+				  <div class="col-lg-6">
+					<div class="services d-flex w-100">
+					  <div class="icon icon-2 d-flex align-items-center justify-content-center">
+						<span class="flaticon-medal"></span>
+					  </div>
+					  <div class="text pl-3">
+						<h2>Recognized Expertise</h2>
+						<p>Our team has earned accolades for excellence in both legal and financial domains.</p>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-lg-6">
+					<div class="services d-flex w-100">
+					  <div class="icon icon-2 d-flex align-items-center justify-content-center">
+						<span class="flaticon-auction"></span>
+					  </div>
+					  <div class="text pl-3">
+						<h2>Decades of Experience</h2>
+						<p>With over 60 years of combined experience, we offer unparalleled insights and solutions.</p>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-lg-12">
+					<div class="services d-flex w-100">
+					  <div class="icon icon-2 d-flex align-items-center justify-content-center">
+						<span class="flaticon-lawyer"></span>
+					  </div>
+					  <div class="text pl-3">
+						<h2>Expert Legal & Financial Team</h2>
+						<p>Our dedicated team comprises skilled attorneys and certified financial consultants.</p>
+					  </div>
+					</div>
 				  </div>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-6 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-2.jpg);">
-				  <div class="text">
-					<h2>Criminal Defense</h2>
-					<p>Successfully defending against high-stakes allegations.</p>
+			<div class="col-md-6 half ftco-animate">
+			  <h2 class="mb-4">Schedule a Free Consultation</h2>
+			  <form action="#" class="appointment">
+				<div class="row">
+				  <div class="col-md-6">
+					<div class="form-group">
+					  <input type="text" class="form-control" placeholder="Your Name">
+					</div>
+				  </div>
+				  <div class="col-md-6">
+					<div class="form-group">
+					  <input type="text" class="form-control" placeholder="Email">
+					</div>
+				  </div>
+				  <div class="col-md-12">
+					<div class="form-group">
+					  <div class="form-field">
+						<div class="select-wrap">
+						  <div class="icon"><span class="fa fa-chevron-down"></span></div>
+						  <select name="" id="" class="form-control">
+							<option value="">Services</option>
+							<option value="">Tax Consultation</option>
+							<option value="">Corporate Law</option>
+							<option value="">Family Legal Support</option>
+							<option value="">Audit Assistance</option>
+							<option value="">Property Registration</option>
+							<option value="">Litigation Support</option>
+						  </select>
+						</div>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-md-12">
+					<div class="form-group">
+					  <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+					</div>
+				  </div>
+				  <div class="col-md-12">
+					<div class="form-group">
+					  <input type="submit" value="Submit Request" class="btn btn-primary py-3 px-4">
+					</div>
 				  </div>
 				</div>
-			  </div>
-			</div>
-			<div class="col-md-3 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-3.jpg);">
-				  <div class="text">
-					<h2>Tax Dispute Resolution</h2>
-					<p>Negotiating favorable outcomes in complex tax cases.</p>
-				  </div>
-				</div>
-			  </div>
-			</div>
-	  
-			<div class="col-md-3 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-4.jpg);">
-				  <div class="text">
-					<h2>Contract Drafting</h2>
-					<p>Drafting and reviewing contracts for optimal legal clarity.</p>
-				  </div>
-				</div>
-			  </div>
-			</div>
-			<div class="col-md-3 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-5.jpg);">
-				  <div class="text">
-					<h2>Tax Planning</h2>
-					<p>Providing expert guidance to minimize tax liabilities.</p>
-				  </div>
-				</div>
-			  </div>
-			</div>
-			<div class="col-md-3 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-6.jpg);">
-				  <div class="text">
-					<h2>Real Estate Settlements</h2>
-					<p>Ensuring smooth legal procedures for property transactions.</p>
-				  </div>
-				</div>
-			  </div>
-			</div>
-			<div class="col-md-3 d-flex align-items-stretch">
-			  <div class="case-wrap d-flex">
-				<div class="img" style="background-image: url(images/case-7.jpg);">
-				  <div class="text">
-					<h2>Audit Assistance</h2>
-					<p>Helping clients navigate financial audits with ease.</p>
-				  </div>
-				</div>
-			  </div>
+			  </form>
 			</div>
 		  </div>
 		</div>
