--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     			<div class="col-md-3 d-flex">
     				<div class="intro color-2 d-lg-flex w-100">
     					<div class="icon">
-    						<span class="flaticon-court"></span>
+    						<span class="fi fi-ts-audit"></span>
     					</div>
     					<div class="text">
     						<h2>Tax Filing Assistance</h2>
@@ -122,7 +122,7 @@
     			<div class="col-md-3 d-flex">
     				<div class="intro color-3 d-lg-flex w-100">
     					<div class="icon">
-    						<span class="flaticon-court"></span>
+    						<span class="flaticon-audit"></span>
     					</div>
     					<div class="text">
     						<h2>Financial Audits</h2>
